# core-project

./: projectinfo.xml
code/: CMakeLists.txt
code/coreproject/: CMakeLists.txt  characterPhysicsProperty.cc  characterPhysicsProperty.h  coregameapplication.cc  coregameapplication.h  corenetworkgame.cc  corenetworkgame.h  coreproject.cc
code/coreproject/gamestates/: MenuState.cc  MenuState.h  coregamestate.cc  coregamestate.h
code/coreproject/nidl/: NetworkCommands.nidl  characterPhysics.nidl
data/gui/menu/: about.rml  direct_connect.rml  gamelobby.rml  lobby.rml  main_menu.lua  main_menu.rcss  main_menu.rml  options.rml  serverName.rml  serverlist.rml
data/tables/: blueprints.xml  globals.xml  physicsmaterials.xml
data/tables/db/: Ball.xml  _ui_fonts.xml  _ui_layouts.xml  _ui_scripts.xml  player.xml
nidl/: NetworkCommands.nidl
work/assets/examples/: ak74.sur  ak74_sur.thumb
work/assets/level/: Artefact.attributes  Artefact.constants  Artefact_n3.thumb
work/assets/placeholder/: dummyCharacter.constants
work/levels/: demo_full.xml  level.xml  menu_level.xml  xdryh.xml
